Made the cards all 35em tall so they are aligned. Not the best fix, but good enough for now.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -120,6 +120,7 @@ div.card {
   padding-bottom: 10px;
   text-align: justify;
   border: solid white 2px;
+  height: 35em;
 
   hr {
     border-color: darkgray;
